--- a/content/blog/m4m_01.md
+++ b/content/blog/m4m_01.md
@@ -10,12 +10,14 @@ tags = ["personal", "m4m", "reading"]
 
 # Day One of Meditations for Mortals
 
-___Meditations for Mortals___ is a book by Oliver Burkeman. It arrived at my door last night. (I've recently started buying physical copies of books from small book stores instead of relying on Amazon or Kindle. I want to feel the physical and not feed the beast.) I read __Four Thousand Weeks__ also by Burkeman and enjoyed his perspective on productivity and living a meaningful life. 
+__Meditations for Mortals__ is a new book by Oliver Burkeman. It arrived at my door last night. (I've recently started buying physical copies of books from small book stores instead of relying on Amazon or Kindle. I want to feel the physical and not feed the beast.) I read __Four Thousand Weeks__ also by Burkeman and enjoyed his perspective on productivity and living a meaningful life. 
 
 This new book is a "four-week retreat of the mind" to reflect on ways to make our time on Earth count the way we want. I'm planning to take it day by day and write some notes as a reflection. I will take these all with "M4M."
 
-Diving into today, the theme is to accept that we are finite with finite time. We can never live a "perfect life" or do everything we want. There's something beautiful about that though. We have the opportunity to declare what is important to us by spending our time on it. Burkeman writes, "You can take action not in the tense hope that your actions might be leading you towards some future utopia of perfect productivity, but simply because they're worth doing."
+Diving into today, the theme is to accept that we are finite with finite time. We can never live a "perfect life" or do everything we want. There's something beautiful about that though. We have the opportunity to declare what is important to us by spending our time on it. Burkeman writes the following:
 
-"It's precisely *because* you'll never produce perfect work that you might as well get on with doing the best work you can." It's important for me to remember that doesn't mean work all the time though because work isn't the total meaning of my life. 
+> You can take action not in the tense hope that your actions might be leading you towards some future utopia of perfect productivity, but simply because they're worth doing.... It's precisely *because* you'll never produce perfect work that you might as well get on with doing the best work you can.
+
+It's important for me to remember that doesn't mean work all the time though because work isn't the total meaning of my life. 
 
 I am finite and imperfect. That's wonderful. 
