--- a/content/blog/m4m_06.md
+++ b/content/blog/m4m_06.md
@@ -11,4 +11,4 @@ tags = ["personal", "m4m", "reading"]
 
 > In an age of attention scarcity, the greatest act of good citizenship may be learning to withdraw your attention from everything except the battles you've chosen to fight. 
 
-You don't have to solve every world problem. Pick something you're passionate about and spend your energy on it instead of spreading it out over many causes. `
+You don't have to solve every world problem. Pick something you're passionate about and spend your energy on it instead of spreading it out over many causes. 
